deploy/hello.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
#      hostNetwork: true
      containers:
        - name: hello
          image: echomusic/hello:v2.0
          ports:
            - containerPort: 8090
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 8090        # 前台接待
      targetPort: 8090  # 服务提供者(按摩，推拿)
      nodePort: 30000   # 如果 type 是 NodePort，需要指定 nodePort
  type: NodePort  # 或者 LoadBalancer
