deploy/order.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: order-deploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      #      hostNetwork: true
      containers:
        - name: order
          image: echomusic/order:v2.0
          ports:
            - containerPort: 50051
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 50051        # 前台接待
      targetPort: 50051  # 服务提供者(按摩，推拿)
      nodePort: 30001   # 如果 type 是 NodePort，需要指定 nodePort
  type: NodePort  # 或者 LoadBalancer
