deploy/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: demo-ingress
  namespace: default
#  annotations:
#    nginx.ingress.kubernetes.io/enable-access-log: "true"
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      access_log /var/log/nginx/demo.localdev.me.access.log upstreaminfo if=$loggable;
#      error_log  /var/log/nginx/demo.localdev.me.error.log;
spec:
  ingressClassName: nginx
  rules:
    - host: demo.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 8090
